syntax = "proto3";

package slink.service.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/hominsu/slink/api/slink/service/v1;v1";
option java_multiple_files = true;

service UserService {
  rpc Login(LoginRequest) returns (LoginReply) {
    option (google.api.http) = {
      post: "/v1/login",
      body: "*",
    };
  }
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginReply {
  string token = 1;
  google.protobuf.Timestamp expires_at = 2;
}